# microovn-operator

./: .gitignore  .gitmodules  CONTRIBUTING.md  CONTRIBUTING.org  Makefile  README.md  README.org  RELEASE_PROCESS.md  RELEASE_PROCESS.org  SECURITY.md  SECURITY.org  charmcraft.yaml  pyproject.toml  security.rst  tox.ini
.github/workflows/: _build_charm.yaml  commits.yaml  pr.yaml
dummy/: charmcraft.yaml  config.yaml
dummy/src/: charm.py
lib/charms/microovn/v0/: ovsdb.py
microovn/: Makefile  charmcraft.yaml  metadata.yaml  pyproject.toml  requirements.txt
microovn-control/: Makefile  charmcraft.yaml
microovn-worker/: Makefile  charmcraft.yaml  pyproject.toml  requirements.txt  src  tests  tox.ini
microovn/pki/: README
microovn/src/: charm.py
org-accessibility/: org-runner.py
src/: charm.py  config.py  constants.py  role_handler.py  snap_manager.py  utils.py
src/dashboards/: central-north-daemon.json  central-northbound-db.json  central-southbound-db.json  host-controller.json  host-ovs.json
src/prometheus_alert_rules/: alerts.yaml
tests/: requirements.txt
tests/alerts/: test_alerts_rules.yaml
tests/integration/: conftest.py  test_charm.py  test_main.py  test_role_assignment.py
tests/interface-consumer/: Makefile  charmcraft.yaml  pyproject.toml  requirements.txt
tests/interface-consumer/src/: charm.py
tests/unit/: test_charm.py  test_role_handler.py  test_snap_manager.py  test_unit.py  test_utils.py
token-distributor/: Makefile  charmcraft.yaml
token-distributor/src/: charm.py
token-distributor/tests/unit/: test_charm.py
(+7 files in other folders)
