[project]
name = "interface-consumer"
version ="1.0"
requires-python = ">=3.12"
dependencies = [
    "ops ~= 2.17",
    "cryptography==44.0.1",
    "pydantic==2.9.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "coverage[toml] ~= 7.8",
    "ops[testing] ~= 2.22",
    "pytest ~= 8.3",
    "pytest-mock ~= 3.14",
    "pytest-order ~= 1.3",
    "jubilant ~= 1.0",
    "python-dotenv ~= 1.0",
    # Linting
    "ruff>=0.11.13",
    "codespell>=2.4.1",
    "pyright>=1.1.402",
]
